03/demos/ingress-scenarios/host-rule-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-rule-ingress
spec:
  backend:
    serviceName: nginxhello-default
    servicePort: 80
  rules:
  # - host: ingress.example.com
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: nginxhello-default
  #         servicePort: 80
  - host: blue.ingress.example.com
    http:
      paths:
      - backend:
          serviceName: nginxhello-blue
          servicePort: 80
  - host: red.ingress.example.com
    http:
      paths:
      - backend:
          serviceName: nginxhello-red
          servicePort: 80
