03/demos/ingress-scenarios/single-default-backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: single-default-backend-ingress
spec:
  backend:
    serviceName: nginxhello-default
    servicePort: 80
